--- a/mt-a/package.json
+++ b/mt-a/package.json
@@ -13,8 +13,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@mui/material": "^6.1.10",
+    "@mui/styled-engine-sc": "^6.1.10",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "styled-components": "^6.1.13"
   },
   "devDependencies": {
     "@eslint/js": "^9.15.0",
